Add several extension methods for Dictionary, DateTime, numbers. Add serializers Add XML library with XmlStringSerializer

--- a/ModernSystem.Contracts/ModernSystem.Contracts.csproj
+++ b/ModernSystem.Contracts/ModernSystem.Contracts.csproj
@@ -38,6 +38,8 @@
     <Compile Include="IConfiguration.cs" />
     <Compile Include="IFactory.cs" />
     <Compile Include="IMapper.cs" />
+    <Compile Include="ISerializer.cs" />
+    <Compile Include="IStringSerializer.cs" />
     <Compile Include="ITransformer`2.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
